--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: MarkBruns
+title: Bruno Solutions
 email: MarkBruns@MarkBruns.com
-description: A convoluted collection of bad habits which I indulge as they strangle me per XKCD 1579
+description: Discipline Equals Freedom
 twitter_username: MarkBruns
 github_username:  MarkBruns
 
