Don't Believe Me. Just Watch.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Bruno Solutions
 email: MarkBruns@MarkBruns.com
-description: Discipline Equals Freedom
+description: Don't Believe Me. Just Watch
 twitter_username: MarkBruns
 github_username:  MarkBruns
 
