--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Bruno Solutions
 email: MarkBruns@MarkBruns.com
-description: Don't Believe Me. Just Watch
+description: Don't Believe Me. Just Watch. Be Aware Of The Programming of Your Mind. Control Your Own Projector.
 twitter_username: MarkBruns
 github_username:  MarkBruns
 
