--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Bruno Solutions
 email: MarkBruns@MarkBruns.com
-description: Do.Not.Believe.Me.Just.Watch.What.I Do.THEN.Change.My.Mind.
+description: Do. Not. Believe. Me. Just. Watch. What. I. Do. THEN. Change. My. Mind.
 twitter_username: MarkBruns
 github_username:  MarkBruns
 
