--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Bruno Solutions
+title: BrunoSolutions
 email: MarkBruns@MarkBruns.com
-description: Do. Not. Believe. Me. Just. Watch. What. I. Do. THEN. Change. My. Mind.
+description: The solutions are complex and DIFFERENT, but they are mostly about hybrid cognitive intelligence and discipline.
 twitter_username: MarkBruns
-github_username:  MarkBruns
+github_username:  BRUNOSolutions
 
 # Build settings
 markdown: kramdown
