--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BrunoSolutions
 email: MarkBruns@MarkBruns.com
-description: The solutions are complex and DIFFERENT, but they are mostly about hybrid cognitive intelligence and discipline.
+description: The solutions are complex and cognitively DIFFERENT, but mostly about hybrid intelligence and recursively-intentioned improvement of discipline.
 twitter_username: MarkBruns
 github_username:  BRUNOSolutions
 
