2024 is for prepping for 2028

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BrunoSolutions
 email: MarkBruns@MarkBruns.com
-description: The solutions are complex and cognitively DIFFERENT, but mostly about hybrid intelligence and recursively-intentioned improvement of discipline.
+description: 2024 is for STUDYING How to Best Run for POTUS in 2028
 twitter_username: MarkBruns
 github_username:  BRUNOSolutions
 
