SERVE your constituents FIRST! Enlist them in becoming their own solution, dogfooding their own toolset.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BrunoSolutions
 email: MarkBruns@MarkBruns.com
-description: SERVE your constituents FIRST! It requires at least 4 years to build a campaign. The 2024 campaign is for STUDYING How to Best Run for office in 2028. SERVE your constituents FIRST!
+description: SERVE your constituents FIRST! Enlist them in becoming their own solution, dogfooding their own toolset.
 twitter_username: MarkBruns
 github_username:  BRUNOSolutions
 
