--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BrunoSolutions
 email: MarkBruns@MarkBruns.com
-description: SERVE your core constituencies FIRST! Enlist these people in becoming their own solution, dogfooding their own toolset.
+description: SERVE your core constituencies FIRST!  SERVING FIRST means enlisting these people in the task of becoming their own solution, dogfooding their own toolset.
 twitter_username: MarkBruns
 github_username:  BRUNOSolutions
 
