--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BrunoSolutions
 email: MarkBruns@MarkBruns.com
-description: DOGE-fooding Leadership. SERVE FIRST!  
+description: DOGEfooding Leadership. SERVE FIRST!  
 twitter_username: MarkBruns
 github_username:  BRUNOSolutions
 
