--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: BrunoSolutions
+title: RockRapids
 email: MarkBruns@MarkBruns.com
-description: DOGEfooding Leadership. SERVE FIRST!  
+description: H O M E
 twitter_username: MarkBruns
-github_username:  BRUNOSolutions
+github_username:  RockRapids
 
 # Build settings
 markdown: kramdown
