--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: RockRapids
 email: MarkBruns@MarkBruns.com
-description: H O M E
+description: H O M E ... Health ... Opportunities ... Momentum ... Engagement
 twitter_username: MarkBruns
 github_username:  RockRapids
 
