--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: RockRapids
+title: RockRapids.INFO
 email: MarkBruns@MarkBruns.com
 description: H O M E ... Health ... Opportunities ... Momentum ... Engagement
 twitter_username: MarkBruns
