fix config to get space

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: RockRapids.INFO
+title: INFO
 email: MarkBruns@MarkBruns.com
-description: H O M E ... Health ... Opportunities ... Momentum ... Engagement
+description: RockRapids.INFO
 twitter_username: MarkBruns
 github_username:  RockRapids
 
