--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: 1
+title: 0
 email: MarkBruns@MarkBruns.com
-description: RockRapids.INFO
+description: 0) RockRapids.INFO ... 1) ART, 2)FUN, 3) GUIDE, 4) SHOP, 5) STORE, 6) WORK, 7) XYZ
 twitter_username: MarkBruns
 github_username:  RockRapids
 
